--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query-devtools": "^5.60.6",
     "axios": "^1.7.7",
     "jotai": "^2.10.2",
+    "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "postcss-preset-mantine": "^1.17.0",
     "react": "19.0.0-rc-66855b96-20241106",
